--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ authors = ["Skript_skript <damir_astana@list.ru>"]
 python = "3.7"
 opencv-python = "^4.5.3"
 click = "^8.0.1"
+numpy = "^1.21.2"
+pyspellchecker = "^0.6.2"
 
 [tool.poetry.dev-dependencies]
 
