--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ opencv-python = "^4.5.3"
 click = "^8.0.1"
 numpy = "^1.21.2"
 pyspellchecker = "^0.6.2"
+requests = "^2.26.0"
+py7zr = "^0.16.1"
 
 [tool.poetry.dev-dependencies]
 
